--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -28,8 +28,8 @@
         <!-- blog-post loop -->
         {% for article in articles %}
         <section style="border: 1px solid #ccc; border-radius: 2%;">
-            <div style="margin: 3%;">
-                <a href="{% url 'core:blogpost' article.id %}">
+            <a href="{% url 'core:blogpost' article.id %}">
+                <div style="margin: 3%; display: grid; grid-column: 1fr; grid-gap: 10px;">
                     <img  id="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
                     <div id="blogmeta">
                         <p style="font-size: 12px; color: gray;">{{article.publishdate}}</p>
@@ -39,8 +39,8 @@
                         <br/>
                         <p>{{article.extract}}</p>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </section>
         {% endfor %}
     </div>
