--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -28,13 +28,21 @@
     <div class="articlecontent">
         <div class="maincontent">{{ article.content | safe }}</div>
         <br/>
+        {% if article.credit %}
         <p id="credit" style="color: gray;">{{ article.credit }}</p>
+        {% else %}
+        <div style="display: none;"></div>
+        {% endif %}
     </div>
 
 </div>
 
 <div>
     <p class="entryend">END OF ENTRY</p>
+</div>
+
+<div style="margin: 0% 0% 10% 0%;">
+    <p style="text-align: center;">SHARE THIS STORY</p>
 </div>
     
 <a href="{% url 'core:blogpage' %}" class="articlepagemiddle">
