--- a/core/templates/core/core.html
+++ b/core/templates/core/core.html
@@ -173,7 +173,7 @@
                 display: none;
             }
         }
-        @media screen and (max-width: 740px) {
+        @media screen and (max-width: 769px) {
             .topnav {
                 height: 30px;
             }
@@ -315,8 +315,8 @@
         }
         .articlepage section .meta {
             margin: 0;
-            padding: 0;
-            background-color: orange;
+            padding: 0% 8%;
+            /* background-color: orange; */
             display: grid;
             justify-items: center;
             align-content: center;
@@ -325,23 +325,24 @@
         }
         .articlepage #category {
             font-family: Josefin Sans;
-            color: white;
-            background-color: black;
-            font-size: 12px;
+            color: black;
+            background-color: transparent;
+            font-size: 13px;
             text-transform: uppercase;
-            padding: 1% 2%;
         }
         .articlepage #title {
             font-family: Josefin Sans;
             font-weight: bolder;
             color: black;
-            font-size: 24px;
+            font-size: 30px;
+            /* line-height: 3rem; */
             text-transform: uppercase;
+            margin: 1rem 0rem;
         }
         .articlepage #pubDate {
             font-family: Josefin Sans;
             color: black;
-            font-size: 13px;
+            font-size: 12px;
         }
         .articlecontent {
             padding: 4% 20%;
@@ -378,16 +379,17 @@
             padding-left: 2%;
         }
 
-        @media screen and (max-width: 740px) {
+        @media screen and (max-width: 769px) {
             .articlepage section {
                 grid-template-columns:  1fr;
             }
             .articlepage section .meta {
-                padding: 7% 0%;
+                padding: 7% 2%;
                 grid-gap: 10px;
             }
             .articlepage #title {
-                font-size: 22px;
+                font-size: 30px;
+                margin: 0;
             }
             .articlecontent {
                 padding: 4% 2%;
@@ -424,7 +426,7 @@
             text-decoration: none;
         }
 
-        @media screen and (max-width: 740px) {
+        @media screen and (max-width: 769px) {
             .commentsec {
                 padding: 10% 2%;
             }
@@ -452,7 +454,7 @@
             margin: 0% 0% 4% 0%;
         }
 
-        @media screen and (max-width: 740px) {
+        @media screen and (max-width: 769px) {
             .articlepagebtn {
                 font-size: 11px;
                 border: 2px solid white;
@@ -845,7 +847,7 @@
             display: none;
         }
 
-        @media screen and (max-width: 740px) {
+        @media screen and (max-width: 769px) {
             .eventpage .container img {
                 width: 100%;
             }
@@ -902,5 +904,7 @@
         <a style="float: right; text-decoration: none; color: white; font-size: 11px;" href="{% url 'core:privacy' %}">Legal</a>
     </footer>
 
-    </body>
+</body>
+{% block script %}
+{% endblock script %}
 </html>
