--- a/core/templates/core/events.html
+++ b/core/templates/core/events.html
@@ -5,32 +5,50 @@
     <title>Gigs | Leroy Buliro</title>
 {% endblock title %}
 
+{% block style %}
+<link rel="stylesheet" href="{% static 'core/events.css' %}">
+{% endblock style %}
+
 {% block navmenu %}
-    <!--a id="menuactive">HOME</a-->
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
     <a id="menuactive">GIGS</a>
 {% endblock navmenu %}
 
 {% block body %}
-
-<div class="pagetitle"><p>PAST GIGS<p/></div>
-
 <div class="eventpage">
 
-    <!-- event loop -->
-    
-    {% for event in object_list %}
-        <div class="container">
-            <img src="{{ event.poster.url }}" alt="{{ event.name }}" style="float: left;">
-            <div class="text-block">
-                <p>{{ event.date }}</p>
-                <p>{{ event.name }}</p>
-                <p>{{ event.location }}</p>
-            </div>
+    <div>
+        <p class="pagetitle">UPCOMING GIGS</p>
+        {% if gigs %}
+        <div class="eventcontainer">
+            {% for gig in gigs %}
+                <div class="container">
+                    <img src="{{ event.poster.url }}" alt="{{ event.name }}" style="float: left;">
+                    <div class="text-block">
+                        <p>{{ gig.date }}</p>
+                        <p>{{ gig.name }}</p>
+                        <p>{{ gig.location }}</p>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-    {% endfor %}
+        {% else %}
+        <div style="text-align: center;">
+            <p>no upcoming gigs</p>
+        </div>
+        {% endif %}
+    </div>
+
+    <div>
+        <p class="pagetitle">PAST GIGS</p>
+            {% for event in events %}
+            <div class="text-block">
+                <p>{{ event.date }} | {{ event.name }} | {{ event.location }}</p>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 
 </div>
-
 {% endblock body %}
